Подготовка графики для интеграции

--- a/index.html
+++ b/index.html
@@ -52,7 +52,26 @@
 
         <section class="reviews">
             <div class="wrapper">
-                <!-- здесь будет секция с отзывами -->
+                <div class="reviews__wrapper">
+                    <div class="review__item">
+                        <img src="img/user-1.jpg" alt="" class="review__image" width="50" height="50">
+                        <p class="review__name">Иван Грачев</p>
+                        <p class="review__text">Очень самобытный и необычный проект.</p>
+                    </div>
+                    <div class="review__item">
+                        <img src="img/user-2.jpg" alt="" class="review__image" width="50" height="50">
+                        <p class="review__name">Мария Рачинская</p>
+                        <p class="review__text">Мне особенно понравилось решение лестничных клеток. Кружки вообще очень стильные!</p>
+                    </div>
+                    <div class="review__item">
+                        <!-- <div class="review__image-wrapper">
+                            <img src="img/user-2-vertically.jpg" alt="" class="review__image" width="160" height="160">
+                        </div> -->
+                        <img src="img/user-3.jpg" alt="" class="review__image" width="50" height="50">
+                        <p class="review__name">Светлана</p>
+                        <p class="review__text">Очень нравится, что в городе развиваются такие проекты. Надеюсь, такие проекты скоро будут не только в частных домах, но и в кафе, музеях, театрах. Я бы сходила!</p>
+                    </div>
+                </div>
             </div>
         </section>
 
