--- a/index.html
+++ b/index.html
@@ -2,84 +2,109 @@
 <html lang="ru">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <title>INTERIOR LOUNGE - Дизайн общественных интерьеров</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles/style.css">
+  <title>INTERIOR LOUNGE - Дизайн общественных интерьеров</title>
 </head>
 
 <body>
 
-    <header>
-        <!-- код шапки -->
-    </header>
+  <header>
+    <!-- код шапки -->
+  </header>
 
-    <main class="page-body">
+  <main class="page-body">
 
-        <section class="main-area">
-            <div class="wrapper">
-                <div class="wysiwyg-wrapper">
-                    <!-- здесь будет вставлен код WYSIWYG радактора -->
-                    <h1>Дизайн общественных интерьеров Дизайн общественных интерьеров Дизайн общественных интерьеров Дизайн общественных интерьеров Дизайн общественных интерьеров Дизайн общественных интерьеров</h1>
-                    <h2>Кейс клубного дома Tomazzi Hall Кейс клубного дома Tomazzi Hall Кейс клубного дома Tomazzi Hall Кейс клубного дома Tomazzi Hall Кейс клубного дома Tomazzi Hall Кейс клубного дома Tomazzi Hall</h2>
-                    <p>Создать объект, подобного которому в Санкт-Петербурге еще не было, — такую задачу поставил перед собой девелопер Interior Lounge, продумывая клубный дом Tomazzi Hall. Над экстерьером комплекса работала команда одного из крупнейших архитектурных Бюро России — «Студия 11» разработал концепцию, а мы оформили интерьер 10 парадных и 3 лаунж-зон.</p>
-                    <p>Заказчик знал команду, следил за нашей деятельностью, поэтому никого больше не рассматривал — поручил дизайн парадных и лаунж-зон нам. Основными моментами, на которые мы оринтировались, стали:</p>
-                    <!-- <h3>!!!Заголовок третьего уровня Заголовок третьего уровня Заголовок третьего уровня Заголовок третьего уровня Заголовок третьего уровня Заголовок третьего уровня Заголовок третьего уровня Заголовок третьего уровня Заголовок третьего уровня Заголовок третьего уровня</h3> -->
-                    <ul>
-                        <li>Источники вдохновения планировалось искать в строгой геометрии, модерне и духе «ревущих двадцатых»;</li>
-                        <li>Необходимо было выдержать дорогой и одновременно элегантный стиль;</li>
-                        <li>Ключевой элемент дизайна любого общественного пространства — удобство для жителей.</li>
-                    </ul>
-                    <p>!!!!Параграф после списка для проверки отступов Параграф после списка для проверки отступов Параграф после списка для проверки отступов Параграф после списка для проверки отступов Параграф после списка для проверки отступовПараграф после списка для проверки отступов</p>
-                    <h3>Начало работы и источники вдохновения Начало работы и источники вдохновения Начало работы и источники вдохновения Начало работы и источники вдохновения Начало работы и источники вдохновения Начало работы и источники вдохновения Начало работы и источники вдохновения</h3>
-                    <p>Над экстерьером комплекса работала команда одного из крупнейших архитектурных бюро России — «Студия 11», а мы оформили интерьер 10 парадных и 3 лаунж-зон. Заказчик знал команду, следил за нашей деятельностью, поэтому никого больше не рассматривал — поручил дизайн парадных и лаунж-зон нам.</p>
-                    <div class="wp-block-separator"></div>
-                    <blockquote>«Нам хотелось поддержать внешнюю архитектурную концепцию, но внутри добавить что-то необычное. Сделать некое подобие матрешки, чтобы все время открывались новые смыслы и элементы».</blockquote>
-                    <p>!!!параграф после цитаты для проверки параграф после цитаты для проверки параграф после цитаты для проверки параграф после цитаты для проверки параграф после цитаты для проверки параграф после цитаты для проверки параграф после цитаты для проверки параграф после цитаты для проверки параграф после цитаты для проверки параграф после цитаты для проверки параграф после цитаты для проверки</p>
-                    <div class="wp-block-separator"></div>
+    <section class="main-area">
+      <div class="wrapper">
+        <div class="wysiwyg-wrapper">
+          <!-- здесь будет вставлен код WYSIWYG радактора -->
+          <h1>Дизайн общественных интерьеров Дизайн общественных интерьеров Дизайн общественных интерьеров Дизайн общественных интерьеров Дизайн общественных интерьеров Дизайн общественных интерьеров</h1>
+          <h2>Кейс клубного дома Tomazzi Hall Кейс клубного дома Tomazzi Hall Кейс клубного дома Tomazzi Hall Кейс клубного дома Tomazzi Hall Кейс клубного дома Tomazzi Hall Кейс клубного дома Tomazzi Hall</h2>
+          <p>Создать объект, подобного которому в Санкт-Петербурге еще не было, — такую задачу поставил перед собой девелопер Interior Lounge, продумывая клубный дом Tomazzi Hall. Над экстерьером комплекса работала команда одного из крупнейших архитектурных Бюро России — «Студия 11» разработал концепцию, а мы оформили интерьер 10 парадных и 3 лаунж-зон.</p>
+          <p>Заказчик знал команду, следил за нашей деятельностью, поэтому никого больше не рассматривал — поручил дизайн парадных и лаунж-зон нам. Основными моментами, на которые мы оринтировались, стали:</p>
+          <!-- <h3>!!!Заголовок третьего уровня Заголовок третьего уровня Заголовок третьего уровня Заголовок третьего уровня Заголовок третьего уровня Заголовок третьего уровня Заголовок третьего уровня Заголовок третьего уровня Заголовок третьего уровня Заголовок третьего уровня</h3> -->
+          <ul>
+            <li>Источники вдохновения планировалось искать в строгой геометрии, модерне и духе «ревущих двадцатых»;</li>
+            <li>Необходимо было выдержать дорогой и одновременно элегантный стиль;</li>
+            <li>Ключевой элемент дизайна любого общественного пространства — удобство для жителей.</li>
+          </ul>
+          <p>!!!!Параграф после списка для проверки отступов Параграф после списка для проверки отступов Параграф после списка для проверки отступов Параграф после списка для проверки отступов Параграф после списка для проверки отступовПараграф после списка для проверки отступов</p>
+          <h3>Начало работы и источники вдохновения Начало работы и источники вдохновения Начало работы и источники вдохновения Начало работы и источники вдохновения Начало работы и источники вдохновения Начало работы и источники вдохновения Начало работы и источники вдохновения</h3>
+          <p>Над экстерьером комплекса работала команда одного из крупнейших архитектурных бюро России — «Студия 11», а мы оформили интерьер 10 парадных и 3 лаунж-зон. Заказчик знал команду, следил за нашей деятельностью, поэтому никого больше не рассматривал — поручил дизайн парадных и лаунж-зон нам.</p>
+          <div class="wp-block-separator"></div>
+          <blockquote>«Нам хотелось поддержать внешнюю архитектурную концепцию, но внутри добавить что-то необычное. Сделать некое подобие матрешки, чтобы все время открывались новые смыслы и элементы».</blockquote>
+          <p>!!!параграф после цитаты для проверки параграф после цитаты для проверки параграф после цитаты для проверки параграф после цитаты для проверки параграф после цитаты для проверки параграф после цитаты для проверки параграф после цитаты для проверки параграф после цитаты для проверки параграф после цитаты для проверки параграф после цитаты для проверки параграф после цитаты для проверки</p>
+          <div class="wp-block-separator"></div>
+        </div>
+      </div>
+    </section>
+
+    <section class="order">
+      <div class="wrapper">
+        <h2 class="order-title">Оставить отзыв</h2>
+        <div class="order-form">
+          <div class="wpcf7">
+            <form action="" class="wpcf7-form">
+              <p>
+                <span class="wpcf7-form-control-wrap">
+                  <textarea class="wpcf7-textarea" cols="40" rows="10" placeholder="Расскажите, что вы думаете о проекте"></textarea>
+                </span>
+              </p>
+              <p>
+                <span class="wpcf7-form-control-wrap">
+                  <input type="text" size="40" class="wpcf7-text" placeholder="Ваше имя">
+                </span>
+              </p>
+              <div class="order-submit-area">
+                <p>
+                  <input type="submit" value="Отправить" class="wpcf7-submit">
+                  <span class="ajax-loader"></span>
+                </p>
+                <div class="order-text">
+                  Отзыв будет добавлен после проверки модератором
                 </div>
-            </div>
-        </section>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
 
-        <section class="order">
-            <div class="wrapper">
-                <!-- здесь будет секция с формой -->
-            </div>
-        </section>
-
-        <section class="reviews">
-            <div class="wrapper">
-                <div class="reviews__wrapper">
-                    <div class="review__item">
-                        <img src="img/user-1.jpg" alt="" class="review__image" width="50" height="50">
-                        <p class="review__name">Иван Грачев</p>
-                        <p class="review__text">Очень самобытный и необычный проект.</p>
-                    </div>
-                    <div class="review__item">
-                        <img src="img/user-2.jpg" alt="" class="review__image" width="50" height="50">
-                        <p class="review__name">Мария Рачинская</p>
-                        <p class="review__text">Мне особенно понравилось решение лестничных клеток. Кружки вообще очень стильные!</p>
-                    </div>
-                    <div class="review__item">
-                        <!-- <div class="review__image-wrapper">
+    <section class="reviews">
+      <div class="wrapper">
+        <div class="reviews__wrapper">
+          <div class="review__item">
+            <img src="img/user-1.jpg" alt="" class="review__image" width="50" height="50">
+            <p class="review__name">Иван Грачев</p>
+            <p class="review__text">Очень самобытный и необычный проект.</p>
+          </div>
+          <div class="review__item">
+            <img src="img/user-2.jpg" alt="" class="review__image" width="50" height="50">
+            <p class="review__name">Мария Рачинская</p>
+            <p class="review__text">Мне особенно понравилось решение лестничных клеток. Кружки вообще очень стильные!</p>
+          </div>
+          <div class="review__item">
+            <!-- <div class="review__image-wrapper">
                             <img src="img/user-2-vertically.jpg" alt="" class="review__image" width="160" height="160">
                         </div> -->
-                        <img src="img/user-3.jpg" alt="" class="review__image" width="50" height="50">
-                        <p class="review__name">Светлана</p>
-                        <p class="review__text">Очень нравится, что в городе развиваются такие проекты. Надеюсь, такие проекты скоро будут не только в частных домах, но и в кафе, музеях, театрах. Я бы сходила!</p>
-                    </div>
-                </div>
-            </div>
-        </section>
+            <img src="img/user-3.jpg" alt="" class="review__image" width="50" height="50">
+            <p class="review__name">Светлана</p>
+            <p class="review__text">Очень нравится, что в городе развиваются такие проекты. Надеюсь, такие проекты скоро будут не только в частных домах, но и в кафе, музеях, театрах. Я бы сходила!</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
-    </main>
+  </main>
 
-    <footer>
-        <!-- код футера -->
-    </footer>
+  <footer>
+    <!-- код футера -->
+  </footer>
 
 </body>
 
